API REST LISTA CON BASES DE DATOS SEPARADAS

--- a/FarmAPI/FarmAPI/templates/index.html
+++ b/FarmAPI/FarmAPI/templates/index.html
@@ -1,1 +1,20 @@
-<h1>A MIMIR</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Farm API</title>
+</head>
+<body>
+    <div>
+    <center><h1>¿Que deseas hacer?</h1></center>
+    </div>
+    <div>
+    <center>
+        <a href="api/listarMedicamentos?format=json">Listar Medicamentos</a>
+        <br>
+        <a href="api/listarFichas?format=json">Listar Fichas</a>
+
+</body>
+</html>
